match now displays uwu

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ main {
   align-items: center;
   gap: 30px;
 }
-.matching_information_div_container_one {
+.matchboxtwenty {
   background-color: #cc919c;
   width: 35vw;
   height: 13vh;
