--- a/matchwebsite.css
+++ b/matchwebsite.css
@@ -1,24 +1,24 @@
- /* The Modal (background) */
  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0, 0, 0, 0.5); 
   }
   
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 50%; 
+    text-align: center;
   }
   
   /* The Close Button */
@@ -35,3 +35,27 @@
     text-decoration: none;
     cursor: pointer;
   } 
+
+  .company-logo-modal {
+    width: 50px;
+  }
+
+  #inner-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  #logo-name-container {
+    display: flex;
+    align-items: center;
+  }
+
+  #logo-name-container h2 {
+    margin: 0 auto;
+  }
+
+  .modal-content #h3-about, .modal-content #p-about{
+    text-align: left;
+    margin-left: 2%;
+  }
