--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ main {
   display: flex;
 }
 
+.inactive {
+  display: none;
+}
 .div_for_form_information {
   width: 60vw;
   height: 90vh;
@@ -142,6 +145,21 @@ main {
   text-align: center;
 }
 
+.button-46 {
+  align-items: center;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #DFDFDF;
+  border-radius: 16px;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: flex;
+  min-width: 200px;
+  font-size: 18px;
+  justify-content: center;
+  padding: 14px 22px;
+  text-decoration: none;
+}
 
 /* ADMIN */
 
