--- a/profile.css
+++ b/profile.css
@@ -8,7 +8,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: black solid 1px; 
+    border-bottom: black solid 1px;
 }
 
 .navbar_icon img {
@@ -28,6 +28,11 @@ li {
     list-style-type: none;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 
 /* User-profile */
 body {
@@ -41,7 +46,7 @@ body {
     font-family: 'Inter';
 }
 
-#student-profile{
+#student-profile {
     width: 40%;
     height: 80%;
     text-align: center;
@@ -51,22 +56,28 @@ body {
     margin-top: 70px;
 }
 
-#student-greeting{
+#student-greeting {
     color: #d9516b;
     padding: 10px;
 }
 
-#student-info{
+#student-info {
     margin: 20px;
     height: fit-content;
 }
 
-#label-mail, #label-password, #label-links{
+#label-mail,
+#label-password,
+#label-links {
     color: #d9516b;
     border-bottom: black 1px solid;
 }
 
-#student-mail, #student-password, #student-link1, #student-link2, #student-link3{
+#student-mail,
+#student-password,
+#student-link1,
+#student-link2,
+#student-link3 {
     display: block;
     color: black;
     font-family: 'Inter';
@@ -74,12 +85,14 @@ body {
     font-size: medium;
     background-color: transparent;
     border: none;
-    width:96.7%;
+    width: 96.7%;
     text-align: center;
     padding: 10px;
 }
 
-#student-link1, #student-link2, #student-link3{
+#student-link1,
+#student-link2,
+#student-link3 {
     background-color: #d9516b;
     opacity: 80%;
     margin: 10px;
@@ -87,7 +100,7 @@ body {
     border-radius: 25px;
 }
 
-#student-about{
+#student-about {
     position: absolute;
     right: 150px;
     top: 300px;
@@ -100,7 +113,7 @@ body {
     letter-spacing: 1.5px;
 }
 
-#label-about{
+#label-about {
     position: absolute;
     right: 543px;
     top: 240px;
@@ -108,7 +121,7 @@ body {
     color: white;
 }
 
-#edit-info{
+#edit-info {
     padding: 10px;
     border-radius: 20px;
     border: black 1px solid;
@@ -120,7 +133,7 @@ body {
     left: 60px;
 }
 
-#match-btn{
+#match-btn {
     position: absolute;
     top: 700px;
     right: 200px;
@@ -131,12 +144,12 @@ body {
     font-family: 'Inter';
 }
 
-#match-btn>a{
+#match-btn>a {
     text-decoration: none;
     color: white;
 }
 
-#logout-btn{
+#logout-btn {
     position: absolute;
     top: 700px;
     right: 1375px;
