--- a/matchwebsite.css
+++ b/matchwebsite.css
@@ -119,3 +119,46 @@
     opacity: 1;
   }
 }
+
+#send-message-form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
+}
+
+#send-message-form button {
+  width: 60%;
+  margin: 0 auto;
+}
+
+#tips-list {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
