--- a/style.css
+++ b/style.css
@@ -51,7 +51,21 @@ main {
 .landingpage img {
   width: 100vw;
   height: 78vh;
-  filter: opacity(67%) drop-shadow(8px 8px 10px#3C2A45);
+}
+
+.heroimagecontainer {
+  position: relative;
+}
+
+.heroimagecontainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3c2a459e; 
+  pointer-events: none; 
 }
 
 .landingpage button {
