--- a/profile.css
+++ b/profile.css
@@ -41,8 +41,8 @@ body {
     height: 100vh;
     background: linear-gradient(to right,
             white 0%,
-            white 60%,
-            #d9516b 60%,
+            white 55%,
+            #d9516b 55%,
             #d9516b 100%);
     font-family: 'Inter';
 }
@@ -104,10 +104,16 @@ body {
     margin: 10px auto;
 }
 
-#student-about {
+#about{
+    height: fit-content;
+    display: flex;
+    flex-flow: column;
     position: absolute;
-    right: 5vw;
-    top: 300px;
+    top: 25%;
+    right: 8%;
+}
+
+#student-about {
     background-color: transparent;
     border: none;
     color: white;
@@ -118,11 +124,10 @@ body {
 }
 
 #label-about {
-    position: absolute;
-    right: 30vw;
-    top: 240px;
+    text-align: left;
     font-size: xx-large;
     color: white;
+    margin-bottom: 1rem;
 }
 
 #edit-info {
@@ -132,25 +137,26 @@ body {
     color: #d9516b;
     background-color: transparent;
     font-family: 'Inter';
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 #match-btn {
-    position: absolute;
-    top: 85vh;
-    left: 80vw;
     padding: 10px;
     border-radius: 20px;
     border: black 1px solid;
     background-color: transparent;
     font-family: 'Inter';
+    width: fit-content;
+    align-self: center;
 }
 
 #match-btn>a {
     text-decoration: none;
-    color: white;
+    color:#d9516b;
 }
 
-#logout-btn{
+/* #logout-btn{
     position: relative;
     left: 25vw;
     bottom: 50px;
@@ -160,7 +166,7 @@ body {
     color: #d9516b;
     background-color: transparent;
     font-family: 'Inter';
-}
+} */
 
 #student-mail:enabled{
     border: #d9516b 1px dotted;
