--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,12 @@ li {
   list-style-type: none;
 }
 
+li>a{
+  font-family: 'Inter';
+  text-decoration: none;
+  color: #D9516B;
+}
+
 /* Landingpage main */
 
 main {
