match style upd

--- a/matches.css
+++ b/matches.css
@@ -138,36 +138,67 @@
 
 #send-message-form button {
   width: 60%;
-  margin: 0 auto;
+  margin: 10px auto;
+  background-color: #D9516B;
+  color: white;
+  cursor: pointer;
+  padding: 12px;
+  width: 90%;
+  border: none;
+  text-align: left;
+  outline: none;
+  border-radius: 500px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#send-message-form textarea {
+  border-radius: 8px;
+  border: 2px solid #D9516B;
+  margin: 20px 0;
+}
+
+#send-message-form textarea:focus {
+  border: 3px solid #D9516B;
+  outline: none;
 }
 
 #tips-list {
   display: flex;
   flex-direction: column;
   text-align: left;
+  align-items: start;
+  font-size: 12px;
+}
+
+#tips-list * {
+  padding: .8em;
 }
 
 .collapsible {
-  background-color: #eee;
-  color: #444;
+  background-color: #D9516B;
+  color: white;
   cursor: pointer;
-  padding: 18px;
-  width: 100%;
+  padding: 12px;
+  width: 50%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  border-radius: 500px;
+  text-align: center;
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .collapsible:hover {
-  background-color: #ccc;
+  font-weight: bold;
 }
 
-/* Style the collapsible content. Note: hidden by default */
 .content {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+}
+
+.modal-content h3 {
+  color: #D9516B;
+  font-weight:bolder;
 }
