--- a/style/style.css
+++ b/style/style.css
@@ -4,9 +4,14 @@ body {
 
 /* Navbar*/
 nav {
+  position: fixed;
+  background-color: transparent;
+  right: 0;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  z-index: 200;
 }
 
 .navbar_icon img {
@@ -29,7 +34,7 @@ li {
 li>a{
   font-family: 'Inter';
   text-decoration: none;
-  color: #D9516B;
+  color: white;
   cursor: pointer;
 }
 
@@ -56,6 +61,7 @@ main {
 }
 
 .landingpage img {
+  margin-top: 200px;
   width: 100vw;
   height: 78vh;
 }
@@ -67,7 +73,7 @@ main {
 .heroimagecontainer::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 200px;
   left: 0;
   width: 100%;
   height: 100%;
