--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+* {
+  font-family: Inter, sans-serif;
+}
+
 /* Navbar*/
 nav {
   position: fixed;
@@ -45,6 +49,7 @@ main {
   height: 100vh;
 }
 
+
 .landingpage {
   width: 100vw;
   height: 78vh;
@@ -54,16 +59,26 @@ main {
 }
 
 .landingpage_title_and_textarea {
-  width: 40vw;
+  width: 100vw;
   text-align: center;
   color: white;
   position: absolute;
 }
 
+.landingpage_title_and_textarea p {
+  width: 40%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  line-height: 30px;
+}
+
+.landingpage_title_and_textarea h1 {
+  font-weight: bolder;
+}
+
 .landingpage img {
-  margin-top: 200px;
+  margin-top: 50px;
   width: 100vw;
-  height: 78vh;
 }
 
 .heroimagecontainer {
@@ -73,12 +88,13 @@ main {
 .heroimagecontainer::before {
   content: "";
   position: absolute;
-  top: 200px;
+  top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #3c2a459e; 
   pointer-events: none; 
+  bottom: 0;
 }
 
 .landingpage button {
@@ -88,6 +104,7 @@ main {
   height: 2.5rem;
   border: none;
   color: white;
+  text-transform: uppercase;
 }
 
 
