--- a/style/style.css
+++ b/style/style.css
@@ -166,6 +166,98 @@ main {
   display: none;
 }
 
+.kommunForm div{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.kommunForm {
+  position:absolute;
+  font-size: larger;
+  background-color: #D9516B;
+  padding: 25px;
+  transform: translateX(-13px);
+  width: 260px;
+  border-radius: 9px 9px 39px 39px;
+  border: #000000 1px solid;
+  box-shadow: 0px 4px 10px -3px rgba(0,0,0,0.5);
+  z-index: 999;
+}
+
+input[type="radio"]{
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: black;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid black;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.radio_div_seeking{
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  height: 25px;
+  box-sizing: border-box;
+}
+
+.radio_div{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: 25px;
+  box-sizing: border-box;
+}
+
+.radio_div div{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+}
+input[type="radio"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  color: #D9516B;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em #D9516B;
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
+}
+
+#submitMatchBtn{
+  margin: auto;
+	border-radius: 20px;
+	background-color: #D9516B;
+	box-shadow: 10px 15px 40px #CC919C;
+	width: 250px;
+	height: 50px;
+  margin-top: 20px;
+	font-size: 25px;
+	color: #050303;
+	border: none;
+}
+
+#submitMatchBtn:hover{
+  border: none;
+	background-color: #CC919C;
+	opacity: 1;
+	color: #D9516B;
+  transition: 0.5s ease-in-out;
+	background: #000000;
+}
 .div_for_form_information {
   width: 60vw;
   height: 90vh;
@@ -187,21 +279,36 @@ main {
   text-align: center;
 }
 
-.button-46 {
+.cityButton {
   align-items: center;
   background-color: rgba(240, 240, 240, 0.26);
   border: 1px solid #DFDFDF;
   border-radius: 16px;
   box-sizing: border-box;
   color: #000000;
-  cursor: pointer;
   display: flex;
-  min-width: 200px;
+  min-width: 280px;
   font-size: 18px;
   justify-content: center;
   padding: 14px 22px;
   text-decoration: none;
 }
+
+.active{
+  background-color: #D9516B;
+}
+.cityButton:hover{
+  transition: 0.25s ease-in-out;
+  scale: 1.05;
+  background-color: #D9516B;
+  box-shadow: 0px 10px 13px -3px rgba(0,0,0,0.50);
+}
+
+.cityButton:checked{
+  background-color: #D9516B;
+}
+
+
 
 /* ADMIN */
 
